fixed title and metadata

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <!-- <title>Netlify example: Serverless functions</title>
-  <meta name="description" content="A 'hello world' example of using Netlify Functions to add serverless functions to your web project.">
-   -->
+  <title>R.I.P.ets.ie</title>
+  <meta name="description" content="Grief is the price we pay for love.">
   <link rel="icon" href="./ripets_icon.ico" type="image/x-icon" />
 
 </head>
