added logo to share link

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>R.I.P.ets</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>R.I.P.ets.ie</title>
+  <meta property="og:image" content="./ripets.svg" />
+  <meta property="og:image:alt" content="R.I.P.ets Logo" />
   <meta name="description" content="Grief is the price we pay for love.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="./ripets_icon.ico" type="image/x-icon" />
 
 </head>
