moved images to folder, added specialize og image

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>R.I.P.ets</title>
   <meta charset="UTF-8" />
-  <meta property="og:image" content="./ripets.svg" />
+  <meta property="og:image" content="./images/ripets_og.svg" />
   <meta property="og:image:alt" content="R.I.P.ets Logo" />
   <meta name="description" content="Grief is the price we pay for love.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" href="./ripets_icon.ico" type="image/x-icon" />
+  <link rel="icon" href="./images/ripets_icon.ico" type="image/x-icon" />
 
 </head>
 <style>
@@ -24,7 +24,7 @@
 <body>
 
     <div style="text-align: center; margin-top: 20px; max-width: 100%; height: auto;">
-      <img src="./ripets.svg" alt="Top Image">
+      <img src="./images/ripets.svg" alt="Top Image">
     </div>
     
 </body>
