--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>R.I.P.ets</title>
-  <meta charset="UTF-8" />
-  <meta property="og:image" content="./images/ripets_og.svg" />
-  <meta property="og:image:alt" content="R.I.P.ets Logo" />
-  <meta name="description" content="Grief is the price we pay for love.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" href="./images/ripets_icon.ico" type="image/x-icon" />
-
-</head>
-<style>
-  body {
-    background-color: #d8d4c9;
-  }
-  @media (max-width: 768px) {
-        img {
-          max-width: 100%;
-          height: auto;
-        }
-      }
-</style>
-<body>
-
-    <div style="text-align: center; margin-top: 20px; max-width: 100%; height: auto;">
-      <img src="./images/ripets.svg" alt="Top Image">
-    </div>
+  <head>
+    <title>R.I.P.ets</title>
+    <meta charset="UTF-8" />
+    <meta property="og:image" content="./images/ripets_og.svg" />
+    <meta property="og:image:alt" content="R.I.P.ets Logo" />
+    <meta name="description" content="Grief is the price we pay for love." />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <link rel="icon" href="./images/ripets_icon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./index.css" />
     
-</body>
+  <script type="module" src="./scripts/modalHandler.js" defer></script>
+
+  </head>
+
+  <body>
+    <div class="main-image">
+      <img src="./images/ripets.svg" alt="Top Image" />
+    </div>
+  </body>
+
+  <footer>
+    <button id="contactButton">Contact Us</button>
+    <button id="aboutButton">About</button>
+
+    <div id="aboutModal" class="modal">
+      <div class="modal-content">
+        <span class="modal-close" id="closeAboutModal">&times;</span>
+        <h2>About R.I.P.ets</h2>
+        <p>
+          R.I.P.ets is a platform dedicated to honoring the memory of beloved
+          pets. We believe that grief is the price we pay for love, and we are
+          here to support you in cherishing those memories.
+        </p>
+      </div>
+    </div>
+
+    <div id="contactFormModal" class="modal">
+      <div class="modal-content">
+        <span id="closeModal" class="modal-close">&times;</span>
+        <h2>Contact Us</h2>
+        <form>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Your name.." />
+
+          <label for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Your email.."
+          />
+
+          <label for="message">Message</label>
+          <textarea
+            id="message"
+            name="message"
+            placeholder="Write your message.."
+            maxlength="500"
+            rows="4"
+          ></textarea>
+
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    </footer>
+  
+
+  </body>
+
+
+
+  <!-- <script>
+    const modals = {
+      contact: {
+        button: document.getElementById("contactButton"),
+        modal: document.getElementById("contactFormModal"),
+        close: document.getElementById("closeModal"),
+      },
+      about: {
+        button: document.getElementById("aboutButton"),
+        modal: document.getElementById("aboutModal"),
+        close: document.getElementById("closeAboutModal"),
+      },
+    };
+
+    Object.values(modals).forEach(({ button, modal, close }) => {
+      button.addEventListener("click", () => {
+        modal.style.display = "flex";
+      });
+
+      close.addEventListener("click", () => {
+        modal.style.display = "none";
+      });
+
+      window.addEventListener("click", (event) => {
+        if (event.target === modal) {
+          modal.style.display = "none";
+        }
+      });
+    });
+  </script> -->
 </html>
