--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
     />
     <link rel="icon" href="./images/ripets_icon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./index.css" />
-    
-  <script type="module" src="./scripts/modalHandler.js" defer></script>
+    <script type="module" src="./scripts/modalHandler.js" defer></script>
 
   </head>
 
@@ -44,10 +43,11 @@
         <span id="closeModal" class="modal-close">&times;</span>
         <h2>Contact Us</h2>
         <form>
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" placeholder="Your name.." />
 
-          <label for="email">Email</label>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Your name.." autocomplete="name"  />
+
+          <label for="email" autocomplete="email">Email</label>
           <input
             type="email"
             id="email"
@@ -74,35 +74,4 @@
   </body>
 
 
-
-  <!-- <script>
-    const modals = {
-      contact: {
-        button: document.getElementById("contactButton"),
-        modal: document.getElementById("contactFormModal"),
-        close: document.getElementById("closeModal"),
-      },
-      about: {
-        button: document.getElementById("aboutButton"),
-        modal: document.getElementById("aboutModal"),
-        close: document.getElementById("closeAboutModal"),
-      },
-    };
-
-    Object.values(modals).forEach(({ button, modal, close }) => {
-      button.addEventListener("click", () => {
-        modal.style.display = "flex";
-      });
-
-      close.addEventListener("click", () => {
-        modal.style.display = "none";
-      });
-
-      window.addEventListener("click", (event) => {
-        if (event.target === modal) {
-          modal.style.display = "none";
-        }
-      });
-    });
-  </script> -->
 </html>
